--- a/src/crypto.html
+++ b/src/crypto.html
@@ -18,6 +18,15 @@
         </li>
       </ul>
     </nav>
+    <h1 class="crypto-header">Crypto Tracker</h1>
+    <table class="crypto-table">
+      <tr>
+        <th>Rank</th>
+        <th>Name</th>
+        <th>Price (USD)</th>
+        <th>Price (HRK)</th>
+      </tr>
+    </table>
     <script src="crypto.js"></script>
   </body>
 </html>
