Add exchange div

--- a/src/crypto.html
+++ b/src/crypto.html
@@ -19,6 +19,7 @@
       </ul>
     </nav>
     <h1 class="crypto-header">Crypto Tracker</h1>
+    <div class="exchange"></div>
     <table class="crypto-table">
       <tr>
         <th>Rank</th>
