--- a/src/index.html
+++ b/src/index.html
@@ -18,6 +18,7 @@
         </li>
       </ul>
     </nav>
+    <h1 class="hr-header">HR Management</h1>
     <div class="edit-popup hide">
       <input type="text" name="" class="edit-ime" />
       <input type="text" name="" class="edit-prezime" />
