--- a/src/index.html
+++ b/src/index.html
@@ -27,6 +27,7 @@
       <input type="text" name="" class="edit-broj-mobitela" />
       <button class="btn-update">Update</button>
     </div>
+    <div class="container">
     <form>
       <input class="ime item" type="text" placeholder="ime" required />
       <input class="prezime item" type="text" placeholder="prezime" required />
@@ -51,6 +52,7 @@
     </form>
     <div class="items">
       <ul class="list-items"></ul>
+      </div>
     </div>
     <script src="index.js"></script>
   </body>
