--- a/src/index.html
+++ b/src/index.html
@@ -30,7 +30,12 @@
     <div class="container">
     <form>
       <input class="ime item" type="text" placeholder="ime" required />
-      <input class="prezime item" type="text" placeholder="prezime" required />
+        <input
+          class="prezime item"
+          type="text"
+          placeholder="prezime"
+          required
+        />
       <input
         class="email item"
         type="email"
