Rename edit button class

--- a/src/hr-management/index.html
+++ b/src/hr-management/index.html
@@ -24,7 +24,7 @@
       <input type="email" name="" class="edit-email" />
       <input type="text" name="" class="edit-adresa" />
       <input type="text" name="" class="edit-broj-mobitela" />
-      <button class="btn-update">Update</button>
+      <button class="button-update">Update</button>
     </div>
     <div class="container">
       <form>
